# fund-keeper

./: .gitignore  DEPLOY.md  OPERATIONS.md  README.md  UPDATE_GUIDE.md  deploy.ps1
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
backend/app/: agent.py  backtest.py  config.py  database.py  fund_api.py  main.py  models.py
backend/app/agent/: __init__.py  _common.py  advisor.py  emotion.py  macro.py  tiers.py
backend/app/routers/: admin.py  auth.py  calendar.py  chat.py  config.py  funds.py  history.py  screenshot.py  snapshots.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/components/: AIChat.vue  AccountManagement.vue  AdviceResult.vue  AuthPage.vue  ConfigPanel.vue  DailyAnalysis.vue  FundList.vue  FundModal.vue  HealthScore.vue  ManualTrade.vue  OperationHistory.vue  PositionOverview.vue  StrategyOverviewPanel.vue
frontend/src/components/tabs/: HoldingsTab.vue  MineTab.vue  StrategyTab.vue  TradeTab.vue
frontend/src/composables/: useStore.js
frontend/src/stores/: app.js  chat.js  config.js  fund.js  history.js
frontend/src/styles/: global.css
frontend/src/utils/: bigMath.js  constants.js  dialog.js  engine.js  helpers.js
